blueox (0.5.6)

  * Fix bug in Django middleware where blocked requests caused response error.

-- Rhett Garber <rhettg@gmail.com>  Thu, 24 Oct 2013 11:42:00 -0700

blueox (0.5.5)

  * Handle serializing python decimal and other more resiliancy around
    serializing contexts.
  * Django middleware handles 'None' response values.
  * Remove extra cookies value in django middleware. It can be parsed out of
    headers.

-- Rhett Garber <rhettg@gmail.com>  Tue, 22 Oct 2013 11:11:00 -0700

blueox (0.5.4)

  * Fix issue with logger that could result in some bad recursion.

-- Rhett Garber <rhettg@gmail.com>  Mon, 21 Oct 2013 22:57:00 -0700

blueox (0.5.3)

  * zmq socket changes for better behavior during oxd failures.

-- Rhett Garber <rhettg@gmail.com>  Thr, 17 Oct 2013 13:15:00 -0700

blueox (0.5.2)

  * Support for Celery
  * Fix for bad clients crashing oxd
  * Support nested overlap in context names

-- Rhett Garber <rhettg@gmail.com>  Tue, 15 Oct 2013 11:26:00 -0700

blueox (0.5.1)

  * Packaging issue

-- Rhett Garber <rhettg@gmail.com>  Mon, 30 Sep 2013 18:27:00 -0700

blueox (0.5.0)

  * Django middleware support
  * Threadsafe (specifically to handle django dev server)

-- Rhett Garber <rhettg@gmail.com>  Fri, 27 Sep 2013 18:53:00 -0700

blueox (0.4.0)

  * Tornado upgrades for 2.4.1

-- Rhett Garber <rhettg@gmail.com>  Mon, 24 Dec 2012 14:01:00 -0700

blueox (0.3.1)

  * Fix client lib for reading log files.
  * Fix an issue with forwarding log events

-- Rhett Garber <rhettg@gmail.com>  Fri, 23 Nov 2012 10:06:00 -0700

blueox (0.3.0)

  * Convert to MsgPack format. Not backwards compatible.
  * Handle EINTR, raised by newer zmq versions.
  * Hooks for shutting BlueOx down, prevents hangs.
  * Change wire format to make timestamp a double

-- Rhett Garber <rhettg@gmail.com>  Wed, 17 Oct 2012 11:30:00 -0700

blueox (0.2.0)

  * Rename so as to have a unique pypi name.
  * Reduce CPU usage in oxd by avoiding full event decoding
